force-app/main/default/objects/Scheduler_Fields__mdt/Scheduler_Fields__mdt.object-meta.xml
<CustomObject>
    <label>Scheduler Fields</label>
    <pluralLabel>Scheduler Fields</pluralLabel>
</CustomObject>