force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_API_Name__c</fullName>
    <label>Event API Name</label>
    <type>TextArea</type>
</CustomField>