force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Color__c.field-meta.xml
<CustomField>
    <fullName>Event_Color__c</fullName>
    <label>Event Color</label>
    <type>TextArea</type>
</CustomField>