force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Color_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Color_API_Field__c</fullName>
    <label>Event Color API Field</label>
    <type>TextArea</type>
</CustomField>