force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Edit_Mode_Fields__c.field-meta.xml
<CustomField>
    <fullName>Event_Edit_Mode_Fields__c</fullName>
    <label>Event Edit Mode Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>