force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Icon__c.field-meta.xml
<CustomField>
    <fullName>Event_Icon__c</fullName>
    <label>Event Icon</label>
    <type>TextArea</type>
</CustomField>