force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Icon_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Icon_API_Field__c</fullName>
    <label>Event Icon API Field</label>
    <type>TextArea</type>
</CustomField>