force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_Type__c</fullName>
    <label>Event Name Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>