force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Previous_Event_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Previous_Event_API_Field__c</fullName>
    <label>Event Previous Event API Field</label>
    <type>TextArea</type>
</CustomField>