force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Second_Parent_Resource_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Second_Parent_Resource_API_Field__c</fullName>
    <label>Event Second Parent Resource API Field</label>
    <type>TextArea</type>
</CustomField>