force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Start_Date_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_API_Field__c</fullName>
    <label>Event Start Date API Field</label>
    <type>TextArea</type>
</CustomField>