force-app/main/default/objects/Scheduler_Fields__mdt/fields/Event_Tooltip_Fields__c.field-meta.xml
<CustomField>
    <fullName>Event_Tooltip_Fields__c</fullName>
    <label>Event Tooltip Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>