force-app/main/default/objects/Scheduler_Fields__mdt/fields/Hotel_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_API_Name__c</fullName>
    <label>Hotel API Name</label>
    <type>TextArea</type>
</CustomField>