force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Bookable_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Bookable_API_Field__c</fullName>
    <label>Resource Bookable API Field</label>
    <type>TextArea</type>
</CustomField>