force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Display_Columns_API_Fields__c.field-meta.xml
<CustomField>
    <fullName>Resource_Display_Columns_API_Fields__c</fullName>
    <label>Resource Display Columns API Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>