force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Maintenance_End_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Maintenance_End_API_Field__c</fullName>
    <label>Resource Maintenance End API Field</label>
    <type>TextArea</type>
</CustomField>