force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Opening_Hours_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Opening_Hours_API_Name__c</fullName>
    <label>Resource Opening Hours API Name</label>
    <type>TextArea</type>
</CustomField>