force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Opening_Hours_Days_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Opening_Hours_Days_API_Field__c</fullName>
    <label>Resource Opening Hours Days API Field</label>
    <type>TextArea</type>
</CustomField>