force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Opening_Hours_Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource_Opening_Hours_Resource__c</fullName>
    <label>Resource Opening Hours Resource</label>
    <type>TextArea</type>
</CustomField>