force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Opening_Hours_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Resource_Opening_Hours_Start_Time__c</fullName>
    <label>Resource Opening Hours Start Time</label>
    <type>TextArea</type>
</CustomField>