force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Order_Rule__c.field-meta.xml
<CustomField>
    <fullName>Resource_Order_Rule__c</fullName>
    <defaultValue>&apos;Name ASC&apos;</defaultValue>
    <label>Resource Order Rule</label>
    <type>TextArea</type>
</CustomField>