force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Parent_Resource_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Parent_Resource_API_Field__c</fullName>
    <label>Resource Parent Resource API Field</label>
    <type>TextArea</type>
</CustomField>