force-app/main/default/objects/Scheduler_Fields__mdt/fields/Resource_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_API_Name__c</fullName>
    <label>Resource Type API Name</label>
    <type>TextArea</type>
</CustomField>