force-app/main/default/objects/Scheduler_Fields__mdt/fields/Time_Range_Start_Date_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Time_Range_Start_Date_API_Field__c</fullName>
    <label>Time Range Start Date API Field</label>
    <type>TextArea</type>
</CustomField>